@@ -6,9 +6,12 @@ Version 8.14 (Unreleased)
 - Added data migration to merge legacy releases
 - Added support for symbolizing inlined frames and added heuristics for fixing up native stacktraces.
 - Removed instruction_offset as a frame attribute from stacktraces
+- [BREAKING] Quotas must now instantiate RateLimited and NotRateLimited return values.
+- [BREAKING] Redis quota implementations now return BasicRedisQuota instead of tuples.
 
 Schema Changes
 ~~~~~~~~~~~~~~
+
 - Added unique index on ``Release(organization_id, version)``
 - Removed unique index on ``Release(project_id, version)``
 
@@ -33,6 +36,7 @@ Version 8.13
 
 Schema Changes
 ~~~~~~~~~~~~~~
+
 - Added ``ReleaseProject.new_groups`` column.
 - Added ``OrganizationAvatar`` model.
 
